// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DivImage snapshots full render snapshots basic image with fixed size 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignSelf": "stretch",
        "height": 200,
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "overflow": "hidden",
        }
      }
    >
      <Image
        onError={[Function]}
        onLoadEnd={[Function]}
        ref={null}
        resizeMode="cover"
        source={
          {
            "uri": "https://example.com/photo.jpg",
          }
        }
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`DivImage snapshots full render snapshots image with alignment 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignSelf": "stretch",
        "height": 200,
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignItems": "flex-start",
          "justifyContent": "flex-start",
          "overflow": "hidden",
        }
      }
    >
      <Image
        onError={[Function]}
        onLoadEnd={[Function]}
        ref={null}
        resizeMode="cover"
        source={
          {
            "uri": "https://example.com/photo.jpg",
          }
        }
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`DivImage snapshots full render snapshots image with aspect ratio and fit scale 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignSelf": "stretch",
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignItems": "center",
          "aspectRatio": 1.78,
          "justifyContent": "center",
          "overflow": "hidden",
        }
      }
    >
      <Image
        onError={[Function]}
        onLoadEnd={[Function]}
        ref={null}
        resizeMode="contain"
        source={
          {
            "uri": "https://example.com/photo.jpg",
          }
        }
        style={
          {
            "aspectRatio": 1.78,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;
